--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
 springdoc.swagger-ui.path=/swagger-ui.html
-
+hibernate.cfg.hibernate.hbm2ddl.auto = update
 
 
