--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://sql7.freemysqlhosting.net:3306/sql7601161
-spring.datasource.username=sql7601161
-spring.datasource.password=sbrGnwtDpK
+spring.datasource.url=jdbc:mysql://localhost:3306/cryptoApp
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.show-sql=true
