--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,15 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>5.6.1</version>
 		</dependency>
+		<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+	</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<optional>true</optional>
+		</dependency>
 
 		<!-- Spring Security Configuration -->
 		<dependency>
@@ -74,10 +83,7 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>5.6.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency>
+
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
